RESOLVED FIXED305497
Incorrect indentation in inline direction on paginated content
https://bugs.webkit.org/show_bug.cgi?id=305497
Summary Incorrect indentation in inline direction on paginated content
alan
Reported 2026-01-14 12:27:08 PST
Created attachment 478020 [details] test reduction for context see bug 303056
Attachments
test reduction (914 bytes, text/html)
2026-01-14 12:27 PST, alan
no flags
A slightly more reduced test case (385 bytes, text/html)
2026-01-14 13:32 PST, alan
no flags
Patch (3.79 KB, patch)
2026-01-14 17:56 PST, alan
no flags
[fast-cq]Patch (3.79 KB, patch)
2026-01-14 19:31 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2026-01-14 12:35:29 PST
alan
Comment 2 2026-01-14 13:32:50 PST
Created attachment 478021 [details] A slightly more reduced test case
alan
Comment 3 2026-01-14 17:56:57 PST
alan
Comment 4 2026-01-14 19:31:46 PST
Created attachment 478027 [details] [fast-cq]Patch
EWS
Comment 5 2026-01-15 06:10:43 PST
Committed 305639@main (9e3909849159): <https://commits.webkit.org/305639@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478027 [details].
Note You need to log in before you can comment on or make changes to this bug.