Cherry-pick 9e3909849159. rdar://169013033

https://bugs.webkit.org/show_bug.cgi?id=305497
     Incorrect indentation in inline direction on paginated content
    <rdar://problem/168163000>

    Reviewed by Antti Koivisto.

    Fix this off-by-one error introduced at 303615@main.

    Test: fast/multicol/second-colum-has-first-formatted-line-fail2.html

    * LayoutTests/fast/multicol/second-colum-has-first-formatted-line-fail2-expected.html: Added.
    * LayoutTests/fast/multicol/second-colum-has-first-formatted-line-fail2.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
    (WebCore::Layout::InlineFormattingContext::lineLayout): current line is never a first line candidate when there's a "previous" line.

    Canonical link: https://commits.webkit.org/305639@main

Identifier: 305413.188@safari-7624-branch